# Windows_AutoTheme

./: .gitignore  LICENSE  PRIVACY.md  README-English.md  README.md  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feedback.md
src/: App.css  App.tsx  Content.tsx  DataSave.ts  Mainoption.tsx  TitleBar.tsx  Type.ts  doc.tsx  main.tsx  sociti.ts  svg.d.ts  typings.d.ts  updates.tsx  vite-env.d.ts
src-tauri/: 2  Auto Theme Mode.aip  Cargo.toml  Tuyang.AutoThemeMode.yaml  tauri-app.exe.vmp  tauri.conf.json
src-tauri/Appx/: Tuyang.AutoThemeMode.yaml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/language/: en-US.json  es-ES.json  index.tsx  ja-JP.json  zh-CN.json  zh-HK.json
src/mod/: Crontab.ts  DataSave.ts  Deviation.tsx  Mainoption.tsx  PageTitle.ts  RatingPrompt.tsx  ThemeConfig.ts  WindowCode.ts  adjustTime.ts  openStoreRating.ts  searchCiti.tsx  sociti.ts  update.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
