[package]
name = "AutoThemeMode"
version = "1.5.9"
description = "AutoThemeMode"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
windows-bindgen = "0.52.0"

[dependencies]
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [ "tray-icon", "image-png" ] }
serde_json = "1"
tauri-plugin-http = "2"
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
winapi = { version = "0.3", features = ["winuser", "winbase"] }
chrono = "0.4"
tauri-plugin-log = "2"
tauri-plugin-persisted-scope = "2" 
tauri-plugin-os = "2.2.1"
windows-applicationmodel = "0.23.0"
windows = { version = "0.61.3", features = [] }
[http]
proxy = ""


[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true # 启用链接时优化。
opt-level = "s" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort" # 通过禁用 panic 处理程序来提高性能。
strip = true # 确保移除调试符号。

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"



